// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconExclamationMark should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-exclamation-mark "
  height={20}
  viewBox="0 0 20 20"
  width={20}
>
  <path
    className="fill-color"
    d="M10 20a10 10 0 1 1 0-20 10 10 0 0 1 0 20zm0-16a1 1 0 0 0-1 1v6a1 1 0 1 0 2 0V5c0-.6-.4-1-1-1zm0 12a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"
    fill="#999"
    fillRule="nonzero"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconExclamationMark should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-exclamation-mark test"
  height={100}
  title="title"
  viewBox="0 0 20 20"
  width={200}
>
  <path
    className="fill-color"
    d="M10 20a10 10 0 1 1 0-20 10 10 0 0 1 0 20zm0-16a1 1 0 0 0-1 1v6a1 1 0 1 0 2 0V5c0-.6-.4-1-1-1zm0 12a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"
    fill="#999"
    fillRule="nonzero"
  />
</AccessibleSVG>
`;
